--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DV1QEDQLY0"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-931R8C2D2M"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-DV1QEDQLY0');
+      gtag('config', 'G-931R8C2D2M');
   </script>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript" >
