--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <script type="application/ld+json">
+          {
+              "@context": "https://schema.org/",
+              "@type": "Information",
+              "name": "МастерОК г Витебск",
+              "description": "Услуги по установке окон и дверей в городк Витебск"
+
+          }
+      </script>
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-931R8C2D2M"></script>
