--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
       <script type="application/ld+json">
           {
-              "@context": "https://schema.org/",
-              "@type": "Information",
-              "name": "МастерОК г Витебск",
-              "description": "Услуги по установке окон и дверей в городк Витебск"
-
+              "@context": "https://schema.org",
+              "@type": "WebSite",
+              "name": "Master OK",
+              "url": "https://www.masterokby.com/#/",
+              "alternateName": "Окна и двери в городе Витебск",
+              "sameAs": [
+                  "https://www.instagram.com/oknadverivitebsk/"
+              ]
           }
       </script>
   </head>
