--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,13 @@
 
           gtag('config', 'AW-11203467967');
       </script>
+      <!-- Google tag (gtag.js) -->
+
+      <!-- Event snippet for Просмотр страницы conversion page -->
+      <script>
+          gtag('event', 'conversion', {'send_to': 'AW-11203467967/t5bkCOCmn6cYEL-1nd4p'});
+      </script>
+
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-931R8C2D2M"></script>
